# Box2dPlatformer

./: CMakeLists.txt  TODO.txt
data/: elements.json
include/: entity.h  entityManager.h  objectManager.h  textureManager.h  world.h
src/: entity.cpp  entityManager.cpp  main.cpp  objectManager.cpp  textureManager.cpp  world.cpp
